# Eldercare-Assist-AI

./: .gitignore  ALL_5_ISSUES_FIXED.md  CICD_IMPLEMENTATION_SUMMARY.md  CI_CD_SETUP_GUIDE.md  COMPLETE_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DOCKER_QUICK_START.md  DOCTOR_CAREGIVER_IMPLEMENTATION_GUIDE.md  Dockerfile  EMOTION_DETECTION_COMPLETE.md  ENHANCEMENT_COMPLETE.md  FIXES_FOR_5_ISSUES.md  FLY_IO_TEST_GUIDE.md  GITHUB_ACTIONS_TEST_GUIDE.md  MOOD_SYNC_FIX_COMPLETE.md  PRISMA_INTEGRATION_COMPLETE.md  QUICK_START.md  QUICK_TEST_GUIDE.md  QUICK_TEST_REFERENCE.md  README.md  SOS_ALERT_FIX_COMPLETE.md  TESTING_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  requirements.txt
backend/: .env.example  README.md  pyproject.toml  test_auth_register.py
backend/.github/workflow/: ci.yml
backend/app/: main.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: base.py
backend/app/db/models/: verification_token.py
backend/app/db/repositories/: audit_repo.py  refresh_repo.py  token_repo.py  user_repo.py
backend/app/models/: user.py
backend/app/routers/: auth_router.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py  email_service.py
backend/app/utils/emails/templates/: reset_password.html  verify_email.html
frontend/: .dockerignore  Dockerfile  EMOTION_CAREGIVER_ALERTS.md  EMOTION_DETECTION_IMPLEMENTATION.md  EMOTION_DETECTION_QUICK_REFERENCE.md  EMOTION_DETECTION_UI_PREVIEW.md  index.html  package-lock.json  package.json  vite.config.js
server/: .dockerignore  .gitignore  Dockerfile  (+14 more)
(+93 files in other folders)
